--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <div class="cart-container">
         <h1>Your Cart</h1>
         <div class="cart-item">
-            <img src="book4.jpg" alt="Book Cover" class="book-cover">
+            <img src="assets/book4.jpg" alt="Book Cover" class="book-cover">
             <div class="book-details">
                 <h2>IKIGAI</h2>
                 <p>Author: Héctor García and Francesc Miralles</p>
