--- a/catalogue.html
+++ b/catalogue.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="logo.png" alt="" srcset="">
+            <img src="assets/logo.png" alt="" srcset="">
         </div>
         <div class="navbar">
             <a href="index.html">Home</a>
@@ -23,12 +23,12 @@
 
         <span>Find Your Pick.</span>
         <ul>
-            <li><img src="book1.jpg" alt=""></li>
-            <li><img src="book2.jpg" alt=""></li>
-            <li><img src="book3.jpg" alt=""></li>
-            <li><img src="book4.jpg" alt=""></li>
-            <li><img src="book5.jpg" alt=""></li>
-            <li><img src="book6.jpg" alt=""></li>
+            <li><img src="assets/book1.jpg" alt=""></li>
+            <li><img src="assets/book2.jpg" alt=""></li>
+            <li><img src="assets/book3.jpg" alt=""></li>
+            <li><img src="assets/book4.jpg" alt=""></li>
+            <li><img src="assets/book5.jpg" alt=""></li>
+            <li><img src="assets/book6.jpg" alt=""></li>
         </ul>
     </section>
 </body>
