--- a/catalogue2.html
+++ b/catalogue2.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="logo.png" alt="" srcset="">
+            <img src="assets/logo.png" alt="" srcset="">
         </div>
         <div class="navbar">
             <a href="index.html">Home</a>
@@ -30,37 +30,37 @@
             <tr>
                 <td>The Psychology of Money</td>
                 <td>₹359/-</td>
-                <td><img src="book1.jpg" alt=""></td>
+                <td><img src="assets/book1.jpg" alt=""></td>
                 <td>Morgan Housel is an author and speaker known for his insights on finance and investing. He is a partner at Collaborative Fund and the author of "The Psychology of Money," which explores the emotional aspects of financial decision-making. Housel’s work combines storytelling with practical advice, making complex concepts accessible.</td>
             </tr>
             <tr>
                 <td>A Story of Struggle</td>
                 <td>₹5389/-</td>
-                <td><img src="book2.jpg" alt=""></td>
+                <td><img src="assets/book2.jpg" alt=""></td>
                 <td>Ashok Kumawat is an author known for his motivational and self-help books, such as "The Turning Point: 45 Steps to Achieve Success." He also works as an associate professor in biomedicine at Örebro University in Sweden.</td>
             </tr>
             <tr>
                 <td>Don't Believe Everything You Think</td>
                 <td>₹259/-</td>
-                <td><img src="book3.jpg" alt=""></td>
+                <td><img src="assets/book3.jpg" alt=""></td>
                 <td>Joseph Nguyen is the author of the #1 international bestseller "Don't Believe Everything You Think." His work focuses on helping people overcome psychological and emotional suffering by understanding the root causes. He is a spiritual thought leader dedicated to unlocking the infinite potential of the mind.</td>
             </tr>
             <tr>
                 <td>IKIGAI</td>
                 <td>₹499/-</td>
-                <td><img src="book4.jpg" alt=""></td>
+                <td><img src="assets/book4.jpg" alt=""></td>
                 <td>Héctor García and Francesc Miralles are co-authors of the bestseller "Ikigai: The Japanese Secret to a Long and Happy Life." García, a long-time resident of Japan, writes about Japanese culture, while Miralles, a specialist in psychology, has authored numerous books and novels.</td>
             </tr>
             <tr>
                 <td>Sapiens</td>
                 <td>₹799/-</td>
-                <td><img src="book5.jpg" alt=""></td>
+                <td><img src="assets/book5.jpg" alt=""></td>
                 <td>Yuval Noah Harari is an Israeli historian, philosopher, and bestselling author known for his works “Sapiens,” “Homo Deus,” and “21 Lessons for the 21st Century.” His writings explore the history and future of humanity, examining themes like consciousness, free will, and the impact of technology.</td>
             </tr>
             <tr>
                 <td>Digital Revolution</td>
                 <td>₹1590/-</td>
-                <td><img src="book6.jpg" alt=""></td>
+                <td><img src="assets/book6.jpg" alt=""></td>
                 <td>Kapil Khurana is a financial expert and author, leading Kapil Khurana Financial Ventures Pvt. Ltd. With extensive experience in financial markets, he has achieved remarkable results for clients. He is also known for his book “Digital Revolution,” which explores the impact of technology on business efficiency.</td>
             </tr>
         </table>
