--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="logo.png" alt="" srcset="">
+            <img src="assets/logo.png" alt="" srcset="">
         </div>
         <div class="navbar">
             <a href="index.html">Home</a>
